# MInDes

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  COPYRIGHT_HEADER  MInDes_EXE.cpp  README.md  compile_exec.sh
MInDes/: MInDes.sln
MInDes/MInDes/: MInDes.vcxproj  MInDes.vcxproj.filters
infile/: LiCellDendrite.mindes  test.mindes
infile/1_nucleation/: 0_ellipse.mindes  1_ellipsoid.mindes  2_polygon.mindes  3_polyhedron.mindes  4_cylindricity.mindes  4_read_bmp24.mindes  5_voronoi2d.mindes  6_voronoi2d_ellips.mindes  7_voronoi2d_inPhis.mindes  8_voronoi3d.mindes
infile/2_preprocess/: 0_fill_phis.mindes  1_relax_interface.mindes  2_merge_phis.mindes  3_merge_phis_auto.mindes  3_phis_index_reordering.mindes  4_remove_inexistence_phis.mindes  6_plot_chem_energy_curve.mindes
infile/6_application/: LithiumDendrite.mindes
lib/x86/: libfftw3-3.lib  libfftw3f-3.lib  libfftw3l-3.lib
modules/: Base.h  InputManager.h  SimModelsManager.h  SimPostprocess.h  SimPreprocess.h  XXXXX_EXAMPLE.h  modules.h
modules/base/: BMP24Reader.h  InputFileMath.h  InputFileReader.h  NucleationTools.h  PresetFunctions.h
modules/input/: AutoInput.h  MeshStructure.h  SolverInit.h  TimeInterval.h
solvers/: Solver_Allen_Cahn.cpp  Solver_Allen_Cahn.h  Solver_Cahn_Hilliard.cpp  Solver_Cahn_Hilliard.h  Solver_Fluid.cpp  Solver_Fluid.h  Solver_Mechanics.cpp  Solver_Mechanics.h  Solver_Temperature.cpp  Solver_Temperature.h  Solver_custom.cpp  Solver_custom.h  Solver_poisson_equation.cpp  Solver_poisson_equation.h  Solvers.cpp  Solvers.h  base.h
solvers/base/: DataFile.h  (+10 more)
(+195 files in other folders)
